--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -203,6 +203,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="forward_prefix">Fw:</string>
     <string name="original_message_divider">-------- Pesan asli --------</string>
     <string name="invalid_email_address">Alamat \'%s\' tidak valid</string>
+    <string name="invalid_email_address_removed">Alamat \\\'%s\\\' tidak valid dan telah dihapus</string>
     <string name="no_recipients_specified">Harap tambahkan setidaknya satu penerima</string>
     <string name="no_password_specified">Waktu kadaluarsa hanya dapat diatur pada pesan terenkripsi penuh. Harap tentukan kata sandi untuk penerima non-ProtonMail Anda.</string>
     <string name="attachment_limit">Lampiran terbatas pada %1$s. Total terlampir akan menjadi %2$s.</string>
@@ -213,6 +214,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="go_to_inbox">Buka kotak masuk saya</string>
     <string name="message_sent">Pesan terkirim</string>
     <string name="message_failed">Kegagalan Mengirim Pesan</string>
+    <string name="message_sending_failures">%d pesan gagal dikirim</string>
     <string name="storage_limit">Batas penyimpanan</string>
     <string name="storage_limit_warning">Sudah mendekati batas penyimpanan</string>
     <string name="do_not_show_again">Jangan tampilkan lagi</string>
@@ -321,6 +323,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="also_archive">Juga Arsipkan</string>
     <string name="label_deleted">Label Dihapus</string>
     <string name="label_deleted_error">Kesalahan saat menghapus label</string>
+    <string name="message_deleted_error">Kesalahan saat menghapus beberapa pesan. Pesan-pesan yang dipilih sedang dalam proses pengiriman?!</string>
     <string name="respond_inline">Tanggapi dalam-baris</string>
     <string name="no_connectivity_detected">Tidak ada konektivitas yang terdeteksi...</string>
     <string name="no_connectivity_message_not_downloaded">Tidak ada konektivitas yang terdeteksi...
@@ -343,8 +346,9 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="saving_failed_no_conn">Gagal menyimpan, tidak ada koneksi</string>
     <string name="can_not_create_account_while_beta">Pembuatan akun dinonaktifkan dalam Beta</string>
     <string name="changing_mailbox_password_disabled_while_beta">Mengubah Password Kotak Pesan dinonaktifkan dalam versi Beta</string>
-    <string name="username_is_available">%s tersedia!</string>
-    <string name="username_is_not_available">%s TIDAK tersedia!</string>
+    <string name="username_is_available">Nama pengguna tersedia!</string>
+    <string name="username_is_not_available">Nama pengguna sudah ada!</string>
+    <string name="username_is_too_long">Panjang maksimum nama pengguna adalah %d karakter!</string>
     <string name="congratulation">Selamat!</string>
     <string name="new_account_ready">Akun email aman \ n Anda telah siap.</string>
     <string name="optional_email_note">Alamat email pemulihan opsional memungkinkan Anda
