--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="max_labels_exceeded">The message %1$s cannot have more than %2$d labels.</string>
     <string name="max_labels_selected">%d labels is the maximum allowed</string>
     <string name="max_attachments_reached">Maximum attachments per message has been reached</string>
+    <string name="max_attachments_size_reached">Maximum attachments size per message has been reached</string>
     <plurals name="hours_string">
         <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
