--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1241,6 +1241,11 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     </string>
     <!-- endregion -->
 
+    <!-- region errors -->
+    <string name="error_image_not_found">Image not found</string>
+    <string name="error_image_bad_url">Malformed image url</string>
+    <!-- endregion -->
+
     <string name="allowed">Allowed</string>
     <string name="denied">Denied</string>
 </resources>
