--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -882,8 +882,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="labels_manage">标签管理</string>
     <string name="folders_manage">文件夹管理</string>
     <string name="swiping_gesture">滑动手势</string>
-    <string name="swipe_action_left">向右滑动</string>
-    <string name="swipe_action_right">向左滑动</string>
+    <string name="swipe_action_right">向右滑动</string>
+    <string name="swipe_action_left">向左滑动</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">选择滑动操作</string>
     <string name="swipe_action_trash">邮件已移至垃圾箱</string>
