--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -934,8 +934,8 @@ k úložišti.</string>
     <string name="labels_manage">Správce štítků</string>
     <string name="folders_manage">Správce složek</string>
     <string name="swiping_gesture">Swiping gesture</string>
-    <string name="swipe_action_left">Gesto zleva doprava</string>
-    <string name="swipe_action_right">Gesto zprava doleva</string>
+    <string name="swipe_action_right">Gesto zleva doprava</string>
+    <string name="swipe_action_left">Gesto zprava doleva</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Zvolit akci posunutí</string>
     <string name="swipe_action_trash">Zpráva byla přesunuta do Koše</string>
