--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -911,8 +911,8 @@ l\'accesso all\'archiviazione.</string>
     <string name="labels_manage">Gestione etichette</string>
     <string name="folders_manage">Gestore cartelle</string>
     <string name="swiping_gesture">Gesto di scorrimento</string>
-    <string name="swipe_action_left">Scorrimento da sinistra a destra</string>
-    <string name="swipe_action_right">Scorrimento da destra a sinistra</string>
+    <string name="swipe_action_right">Scorrimento da sinistra a destra</string>
+    <string name="swipe_action_left">Scorrimento da destra a sinistra</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Scelta azione con gesti di scorrimento</string>
     <string name="swipe_action_trash">Messaggio spostato nel cestino</string>
