--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -905,8 +905,8 @@ akeccum ar tkatut n uḥraz.</string>
     <string name="labels_manage">Labels manager</string>
     <string name="folders_manage">Folders manager</string>
     <string name="swiping_gesture">Swiping gesture</string>
-    <string name="swipe_action_left">Swipe left to right</string>
-    <string name="swipe_action_right">Swipe right to left</string>
+    <string name="swipe_action_right">Swipe left to right</string>
+    <string name="swipe_action_left">Swipe right to left</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Fren tigawt n usnirem</string>
     <string name="swipe_action_trash">Izen ittwasenkez ɣer iḍumman</string>
