--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -910,8 +910,8 @@ acesso ao armazenamento.</string>
     <string name="labels_manage">Gestor de etiquetas</string>
     <string name="folders_manage">Gestor de pastas</string>
     <string name="swiping_gesture">Gestos de deslize</string>
-    <string name="swipe_action_left">Deslizar da esquerda para a direita</string>
-    <string name="swipe_action_right">Deslizar da direita para a esquerda</string>
+    <string name="swipe_action_right">Deslizar da esquerda para a direita</string>
+    <string name="swipe_action_left">Deslizar da direita para a esquerda</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Escolher acção de deslizar</string>
     <string name="swipe_action_trash">Mensagem movida para o lixo</string>
