--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -922,8 +922,8 @@ accesul la spațiul de stocare al telefonului.</string>
     <string name="labels_manage">Gestionare etichete</string>
     <string name="folders_manage">Gestionare foldere</string>
     <string name="swiping_gesture">Gesturi glisare</string>
-    <string name="swipe_action_left">Glisare de la stânga la dreapta</string>
-    <string name="swipe_action_right">Glisare de la dreapta la stânga</string>
+    <string name="swipe_action_right">Glisare de la stânga la dreapta</string>
+    <string name="swipe_action_left">Glisare de la dreapta la stânga</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Alegere acțiune de glisare</string>
     <string name="swipe_action_trash">Mutare mesaj în «Gunoi»</string>
