--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -896,8 +896,8 @@ webmail 介面升級 ProtonMail。</string>
     <string name="labels_manage">標籤管理員</string>
     <string name="folders_manage">資料夾管理員</string>
     <string name="swiping_gesture">滑動手勢</string>
-    <string name="swipe_action_left">從左滑到右</string>
-    <string name="swipe_action_right">從右滑到左</string>
+    <string name="swipe_action_right">從左滑到右</string>
+    <string name="swipe_action_left">從右滑到左</string>
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">選擇 \"滑動動作\"</string>
     <string name="swipe_action_trash">郵件移至垃圾桶</string>
